added some scaffolding for evaluators and pytest

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ pyyaml = "^6.0.2"
 tqdm = "^4.66.5"
 pyquaternion = "^0.9.9"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.2.0"
 
 [build-system]
 requires = ["poetry-core"]
